# ros-kafka-connector

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml
launch/: comm_bridge.launch  kafka_publish.launch  ros_publish.launch  test_publish.launch
src/: avro_register.py  avro_to_rosmsg.py  comm_bridge.py  kafka_publish.py  ros_publish.py  test_publish.py  utils.py
