<?xml version="1.0"?>
<package format="2">
  <name>ros_kafka_connector</name>
  <version>0.0.1</version>
  <description>The ros_kafka_connector package</description>

  <maintainer email="isakdiaz@gmail.com">Isak Diaz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy_message_converter</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
