<?xml version="1.0"?>
<package format="2">
  <name>ros_kafka_connector</name>
  <version>0.0.1</version>
  <description>The ros_kafka_connector package</description>

  <maintainer email="isakdiaz@gmail.com">Isak Diaz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
